--- a/conf/application.conf
+++ b/conf/application.conf
@@ -40,16 +40,16 @@ application.langs="en"
 #
 
 #Mem
-#db.default.driver=org.h2.Driver
-#db.default.url="jdbc:h2:mem:play"
-#db.default.user=sa
-#db.default.password=""
+db.default.driver=org.h2.Driver
+db.default.url="jdbc:h2:mem:play"
+db.default.user=sa
+db.default.password=""
 
 #MySQL
-db.default.driver=com.mysql.jdbc.Driver
-db.default.url="jdbc:mysql://localhost:3306/emprestimo_livro"
-db.default.user=root
-db.default.password=root
+#db.default.driver=com.mysql.jdbc.Driver
+#db.default.url="jdbc:mysql://localhost:3306/emprestimo_livro"
+#db.default.user=root
+#db.default.password=root
 
 #Postgres
 #db.default.driver=org.postgresql.Driver
