banco de dados ajustado para postgres

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -40,10 +40,10 @@ application.langs="en"
 #
 
 #Mem
-db.default.driver=org.h2.Driver
-db.default.url="jdbc:h2:mem:play"
-db.default.user=sa
-db.default.password=""
+#db.default.driver=org.h2.Driver
+#db.default.url="jdbc:h2:mem:play"
+#db.default.user=sa
+#db.default.password=""
 
 #MySQL
 #db.default.driver=com.mysql.jdbc.Driver
@@ -52,10 +52,10 @@ db.default.password=""
 #db.default.password=root
 
 #Postgres
-#db.default.driver=org.postgresql.Driver
-#db.default.url="jdbc:postgresql://localhost:5432/livros-db"
-#db.default.user=postgres
-#db.default.password=admin
+db.default.driver=org.postgresql.Driver
+db.default.url="jdbc:postgresql://localhost:5432/emprestimo_livro"
+db.default.user=postgres
+db.default.password=admin
 
 # You can expose this datasource via JNDI if needed (Useful for JPA)
 #db.default.jndiName=DefaultDS
