--- a/conf/application.conf
+++ b/conf/application.conf
@@ -53,9 +53,9 @@ application.langs="en"
 
 #Postgres
 db.default.driver=org.postgresql.Driver
-db.default.url="jdbc:postgresql://localhost:5432/emprestimo_livro"
-db.default.user=postgres
-db.default.password=admin
+db.default.url="jdbc:postgresql://ec2-54-163-254-93.compute-1.amazonaws.com:5432/demgiu6p378nht"
+db.default.user=yqcmkgehhmkcaw
+db.default.password=BEChijvzG175rzbWW4BQH_9GQp
 
 # You can expose this datasource via JNDI if needed (Useful for JPA)
 #db.default.jndiName=DefaultDS
