--- a/conf/application.conf
+++ b/conf/application.conf
@@ -9,7 +9,8 @@
 #
 # See http://www.playframework.com/documentation/latest/ApplicationSecret for more details.
 #application.secret="tnld^NntMdXvBfgDhGqHPo64lpFoO[0^lV_4X@3KUXB4GRL1]MebRcAZFlDQ<uHl"
-application.secret=C5fQl@JTn^8N/NAD8gfcbh?7DD0rr/EtcclcbyElNiuu4^zNt6/AjLb^;EnVan2R
+application.secret="changeme"
+application.secret=${?APPLICATION_SECRET}
 
 # The application languages
 # ~~~~~
