--- a/conf/application.conf
+++ b/conf/application.conf
@@ -8,7 +8,8 @@
 # This must be changed for production, but we recommend not changing it in this file.
 #
 # See http://www.playframework.com/documentation/latest/ApplicationSecret for more details.
-#application.secret="tnld^NntMdXvBfgDhGqHPo64lpFoO[0^lV_4X@3KUXB4GRL1]MebRcAZFlDQ<uHl"
+# To generate application_secret (project root): activator play-generate-secret
+# To set application_secret on heroku (command line): heroku config:add APPLICATION_SECRET=abc123...
 application.secret="changeme"
 application.secret=${?APPLICATION_SECRET}
 
@@ -51,11 +52,17 @@ application.langs="en"
 #db.default.user=root
 #db.default.password=root
 
-#Postgres
+#Postgres Server
+#db.default.driver=org.postgresql.Driver
+#db.default.url="jdbc:postgresql://ec2-54-163-254-93.compute-1.amazonaws.com:5432/demgiu6p378nht"
+#db.default.user=yqcmkgehhmkcaw
+#db.default.password=BEChijvzG175rzbWW4BQH_9GQp
+
+#Postgres Localhost
 db.default.driver=org.postgresql.Driver
-db.default.url="jdbc:postgresql://ec2-54-163-254-93.compute-1.amazonaws.com:5432/demgiu6p378nht"
-db.default.user=yqcmkgehhmkcaw
-db.default.password=BEChijvzG175rzbWW4BQH_9GQp
+db.default.url="jdbc:postgresql://localhost:5432/emprestimo_livro"
+db.default.user=postgres
+db.default.password=admin
 
 # You can expose this datasource via JNDI if needed (Useful for JPA)
 #db.default.jndiName=DefaultDS
